# technopark_cpp_hw5

./: CMakeLists.txt  README.md  justfile
.github/workflows/: pull_request.yml
include/: errors.h  iterator.h  set.h
src/: main.cpp
test/: CMakeLists.txt  setTests.cpp  test_set.cpp
